--- a/views/attendee.ejs
+++ b/views/attendee.ejs
@@ -108,7 +108,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="topic">Program</label>
-						<select name="program" id="program" class="form-control">
+						<select multiple name="program" id="program" class="form-control">
 							<% for(let i = 0 ; i < list.length; i++) { %>
 								<option value= '<%= list[i].add %>'><%= list[i].add %></option>							
 								<% } %> 
