--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -69,7 +69,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="Zip">Zip</label>
-						<input type="text" class="form-control" id="Zip" name="Zip" pattern="[0-9]{6}" required>
+						<input type="text" class="form-control" id="Zip" name="Zip" pattern="[0-9]" required>
 					</div>
 				</div>
 			</div>
