Made changes to functionality that allows multiple users to register

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -25,7 +25,7 @@
     </div>
     <div class="column1">
       <h2>Quantity</h2>
-      <p>1</p>
+      <p><%= quantity %></p>
 
     </div>
     <div class="column2">
