--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -113,7 +113,7 @@
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
-			<button type="submit" class="btn btn-primary">Submit</button></div>
+			<button type="submit" name="submit" class="btn btn-primary">Submit</button></div>
 		<div class="col-md-4"></div>
 		<input type="text" name="confirm" hidden>
 		<input type="text" name="delete" hidden>
