Change textual errors

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <label for="Email address">Email address</label>
+                    <label for="Email address">Email Address</label>
                     <div class="form-group">
                         <input type="text" class="form-control" name="email" placeholder="Enter email address">
                     </div>
