--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -9,7 +9,7 @@
 			<div class="col-md-2"></div>
 			<div class="col-md-8">
 				<h2>Northwest Faculty Registration Form</h2>
-				<marquee bgcolor="red" style="color:#ffffff" font:"14px" behaviour="alternate" scrolldelay="50">***Only for Northwest faculty***</marquee>
+				<marquee bgcolor="red" style="color:#ffffff" font:"14px" behaviour="alternate" scrollamount="15">***Only for Northwest faculty***</marquee>
 			</div>
 			<div class="col-md-2"></div>
 		</div>
