--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -69,7 +69,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="Zip">Zip</label>
-						<input type="text" class="form-control" id="Zip" name="Zip" pattern="[0-9]" required>
+						<input type="text" class="form-control" id="Zip" name="Zip" pattern="[0-9]+" required>
 					</div>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="contact">Contact Phone</label>
-						<input type="text" class="form-control" id="contact" name="contact" pattern="[0-9]{10}" required></div>
+						<input type="text" class="form-control" id="contact" name="contact" pattern="[0-9]{10}+" required></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
