solve minor issues

--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -89,7 +89,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="school">Zip Code</label>
-						<input type="school" class="form-control" id="zipcode" name="zipcode" pattern="[0-9]"  required></div>
+						<input type="school" class="form-control" id="zipcode" name="zipcode" pattern="[0-9]+"  required></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
