--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -13,9 +13,9 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav ">
             <li> <a class="navbar-brand active" href="/adminattendee">&nbsp;Attendee &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
             <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
