--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -42,7 +42,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="cname">Company Name</label>
-						<input type="text" class="form-control" id="cname" name="cname" pattern="[a-zA-Z ]+"required>
+						<input type="text" class="form-control" id="cname" name="cname" pattern="[a-zA-Z/ ]+"required>
 					</div>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="Zip">Zip</label>
-						<input type="text" class="form-control" id="Zip" name="Zip" pattern="[0-9]" required>
+						<input type="text" class="form-control" id="Zip" name="Zip" pattern="[0-9]+" required>
 					</div>
 				</div>
 			</div>
