--- a/views/AdminPresenter.ejs
+++ b/views/AdminPresenter.ejs
@@ -87,7 +87,7 @@
                       </form>
                       <form action="/presenterpay" method="POST">
                         <input type="text" name="pay" value="<%= list[i].pay %>" hidden>
-                        
+                        <input type="text" value="<%= list[i].email %>" name="email1" hidden>
                         <%if(list[i].pay ==0){%>
                           <td><button type="submit" class="btn btn-success">pay</button></td>
                           <%}%>
@@ -149,7 +149,7 @@
                   </form>
                   <form action="/presenterpay" method="POST">
                     <input type="text" name="pay" value="<%= list[i].pay %>" hidden>
-                    
+                    <input type="text" value="<%= list[i].email %>" name="email1" hidden>
                     <%if(list[i].pay ==0){%>
                       <td><button type="submit" class="btn btn-success">pay</button></td>
                       <%}%>
