Fix issues in cart functionality

--- a/views/deletedatabase.ejs
+++ b/views/deletedatabase.ejs
@@ -3,6 +3,13 @@
   <head>
     <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
   </head>
+  <body>
+    <div clas="row">
+    </div>
+    <div clas="row">
+      </div>
+      <div clas="row">
+        </div>
 
   <form action="/cleardb" method="POST">
     <div class="row">
@@ -10,4 +17,7 @@
         <div class="col-md-4">
             <button type="submit" class="btn btn-primary">Delete Database</button></div>
         <div class="col-md-4"></div>
+      </div>
 </form>
+</body>
+
