--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -13,7 +13,7 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar">
     <div class="container-fluid">
         <ul class="nav navbar-nav ">
             <li> <a class="navbar-brand active" href="/adminattendee">&nbsp;Attendee &nbsp;</a> </li>
