--- a/views/deletedatabase.ejs
+++ b/views/deletedatabase.ejs
@@ -2,7 +2,7 @@
 
   <head>
     <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-  </head>
+  </head><br><br><br><br>
 
   <form action="/cleardb" method="POST">
     <div class="row">
