--- a/views/UpdateDeadlines.ejs
+++ b/views/UpdateDeadlines.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
         <div class="col-md-3"></div>
-        <div class="col-md-9">
+        <div class="col-md-9"><br><br><br><br>
         
         <form method="POST" action="/new" >
             <div class="form-group">
