--- a/views/UpdateFeeDetails.ejs
+++ b/views/UpdateFeeDetails.ejs
@@ -4,7 +4,7 @@
     <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 
 <div class="col-md-3"></div>
-<div class="col-md-9">
+<div class="col-md-9"><br><br><br><br>
 
 <form method="POST" action="/fee" >
     <div class="form-group">
