--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -4,10 +4,13 @@
     <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
   </head>
 
+  <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div><br><br><br><br>
   <body>
     <h2 align="center"> Vendor details list</h2>
-    <br>
-    <br>
+    
+    
     <div class="w3-container">
       <table class="w3-table-all w3-card-4" id="Details" align="center">
         <tr>
