Add functionality that allows admins to conference name

--- a/views/PayThroughCards.ejs
+++ b/views/PayThroughCards.ejs
@@ -8,7 +8,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="Pavan Vudutha.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title> .EDU Conference </title>
+	<title>Conference </title>
 </head>
 
 <body>
