--- a/views/Paymentthroughcheck.ejs
+++ b/views/Paymentthroughcheck.ejs
@@ -8,7 +8,7 @@
 	<link type="text/css" rel="stylesheet" href="Anusha Chowdary Kollu.css" />
 	<link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title> .EDU Conference </title>
+	<title>Conference </title>
 </head>
 <body>
 	<div class="container" align="center">
