--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>.Edu Conference</title>
+  <title>Conference</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,6 +27,7 @@
                   <a href="FeeDetails">Update Fee Details</a>
                   <a href="ProgramDetails">Update Program Details</a>
                   <a href="/Deadline">Update Deadlines</a>
+                  <a href="/Conferencename">Conference Name</a>
                 </ul>
               </li>
               <li> <a class="navbar-brand active" style="color:red" href="deletedatabase">Delete Database</a> </li>
