--- a/views/edupay.ejs
+++ b/views/edupay.ejs
@@ -2,7 +2,7 @@
 
 <head>
     <link href="/css/edupay.css" type="text/css" rel="stylesheet" />
-    <title> .edu conference </title>
+    <title>Conference </title>
 </head>
 
 <body>
