--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>.EDU Conference</title>
+  <title>Conference</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand active" href="/">.EDU Conference</a>
+      <a class="navbar-brand active"></a>
     </div>
     <ul class="nav navbar-nav">
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Registration <span class="caret"></span></a>
