--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
  <input class="btn btn-danger" type="button" onClick="location.href='/users/register'" value='SignUp'></div>
    <input class="btn btn-success" type="button" onClick="location.href='/'" value='Home'>
    <div class="col-md-4"></div>
-<div class="col-md-8"><br><br><h2>.Edu Conference Admin Login</h2><br><br></div>
+<div class="col-md-8"><br><br><h2>Conference Admin Login</h2><br><br></div>
 <form method="post" action="/users/login">
 <div class="col-md-4"></div>
 <div class="col-md-4">
