--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,7 +4,7 @@
 <head>
   <link href="/Assets/css/styles.css" rel="stylesheet" type="text/css" />
   <link href="/Assets/css/cart.css" rel="stylesheet" type="text/css" />
-  <title> .EDU Conference </title>
+  <title>Conference </title>
 </head>
 
 <body>
