--- a/views/presenterconf.ejs
+++ b/views/presenterconf.ejs
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-md-2"></div>
 		<div class="col-md-8">
-			<h2>Thanks for registering .EDU Conference as a presenter</h2>
+			<h2>Thanks for registering for the Conference as a presenter</h2>
 		</div>
 		<div class="col-md-2"></div>
 	</div>
