--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<div class="col-md-8"><br><br><h2>.Edu Conference Administration Registrations</h2><br><br></div>
+<div class="col-md-8"><br><br><h2>Conference Administration Registrations</h2><br><br></div>
 <body>
 <div class="row">
 <div class="col-lg-12">
