Add functionality for admins to update conference prices

--- a/views/Paymentthroughcheck.ejs
+++ b/views/Paymentthroughcheck.ejs
@@ -60,7 +60,7 @@
 	<br><br>
 	<div class="col-md-1"></div>
 	<div class="col-md-4">
-		<p><b>Make Checks Payable To: </b>
+		<p><b>Make Cheques Payable To: </b>
 			<br> Northwest Missouri State University<br></p>
 		<p> Please include a copy of this invoice with your payment!<br> If you have any questions regarding this invoice,<br></p>
 		<b>Please contact</b> <br> Darla Runyon
