--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -16,18 +16,19 @@
   <nav class="navbar navbar-inverse navbar">
     <div class="container-fluid">
         <ul class="nav navbar-nav ">
-            <li> <a class="navbar-brand active" href="/adminattendee">&nbsp;Attendee &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="/adminattendee">Attendee &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
             <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="Add">Add Programs &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="/foodcount">Participants Food Count &nbsp;</a> </li>
-            <li> <a class="navbar-brand active" href="admincontact">User Queries &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="admincontact">User Queries</a> </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Update Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <a href="FeeDetails">Update Fee Details</a>
                   <a href="ProgramDetails">Update Program Details</a>
                   <a href="/Deadline">Update Deadlines</a>
-                  <a href="/Conferencename">Conference Name</a>
+                  <a href="/conferencename">Conference Name</a>
+                  <a href="/amount">Update Prices</a>
                 </ul>
               </li>
               <li> <a class="navbar-brand active" style="color:red" href="deletedatabase">Delete Database</a> </li>
