Retrieve data in invoice page

--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -6,7 +6,7 @@
 
   <div class="container">
       <div class="row">
-        <div class="col-md-2"></div>
+        <div class="col-md-2"></div><br><br><br><br>
   <body>
     <h2 align="center"> Vendor details list</h2>
     
