--- a/views/foodcount.ejs
+++ b/views/foodcount.ejs
@@ -2,7 +2,8 @@
 
   <head>
     <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-  </head>
+  </head><br><br><br><br>
+  
 
 <h3>Attendees(Attendees, Graduate students, Faculty)</h3>
 <p>Regular:  <%= regular %></p>
