--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -87,7 +87,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="name">Contact Name</label>
-						<input type="text" class="form-control" id="name" name="name" pattern="[a-zA-Z ]+"required>
+						<input type="text" class="form-control" id="lname" name="lname" pattern="[a-zA-Z ]+"required>
 					</div>
 				</div>
 			</div>
