--- a/views/AdminPresenter.ejs
+++ b/views/AdminPresenter.ejs
@@ -6,7 +6,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-2"></div>>
+      <div class="col-md-2"></div><br><br><br><br>
 
       <body>
         <div class="col-md-8">
