--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -13,7 +13,7 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar">
+  <nav class="navbar navbar-inverse navbar navbar-fixed-top">
     <div class="container-fluid">
         <ul class="nav navbar-nav ">
             <li> <a class="navbar-brand active" href="/adminattendee">Attendee &nbsp;</a> </li>
