Fix minor issues

--- a/views/conferencename.ejs
+++ b/views/conferencename.ejs
@@ -2,7 +2,7 @@
 
     <div class="container"><br>
         <div class="col-md-4"></div>
-        <div class="col-md-8">
+        <div class="col-md-8"><br><br><br><br>
                
 
             <form method="POST" action="/conferencename">
