--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -85,8 +85,10 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="attach">If document is not ready, Please email to @nwmissouri once registered.</label>
-						<!-- <form action="index.php" method="post" enctype="multipart/form-data"></form> -->
-							<input type="" name="attach""[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$+"></div>
+						
+													<input type="file" name="attach"></div>
+												
+							<input type="" name="attach1" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$+"></div>
 				</div>
 				<div class="col-md-4"></div>
 			</div>
