--- a/Assets/css/homepage.css
+++ b/Assets/css/homepage.css
@@ -1,5 +1,5 @@
 .p1{
-    font-family: cursive;
+    font-family: 'Times New Roman', Times, serif;
     text-align: center;
     color: green;
 
@@ -8,14 +8,14 @@
     width: 60%;
     background-color:lightgrey;
     align-content: center;
-    font-family: cursive;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0px auto;
     
 }
 body{
    
    text-align: center;
-   font-family: cursive;
+   font-family: 'Times New Roman', Times, serif;
    font-size: 16px;
    color:green;
    background-color:white;
