Fix minor issues

--- a/views/adminhomepage.ejs
+++ b/views/adminhomepage.ejs
@@ -1,4 +1,4 @@
 <% include adminheader %>
       <br>
       <br>
-      <h2>welcome to admin home page</h2>
+      <h1>Welcome to admin home page</h1>
