--- a/views/UpdateDeadlines.ejs
+++ b/views/UpdateDeadlines.ejs
@@ -4,17 +4,21 @@
         <div class="col-md-3"></div>
         <div class="col-md-9"><br><br><br><br>
         
+            <div class="row">
         <form method="POST" action="/new" >
             <div class="form-group">
-                <div class="col-md-2">
+                <div class="col-md-3">
             <label for = "Programname">Program Name:</label></div>
-            <div class="col-md-1">
+            <div class="col-md-2">
             <input type="text" name="programname"/></div></div><br><br>
+        </div>
+            <div class="row">
             <div class="form-group">
-                <div class="col-md-2">
+                <div class="col-md-3">
             <label for = "Date">Date & Time:</label></div>
-            <div class="col-md-1">
+            <div class="col-md-2">
             <input type="text" name="Date"/></div></div><br>
+            </div>
             
             <div align="center" class="form-group" >
                 <div class="col-md-5">
