--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -24,11 +24,11 @@
             <li> <a class="navbar-brand active" href="admincontact">User Queries</a> </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Update Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <a href="FeeDetails">Update Fee Details</a>
-                  <a href="ProgramDetails">Update Program Details</a>
-                  <a href="/Deadline">Update Deadlines</a>
-                  <a href="/conferencename">Conference Name</a>
-                  <a href="/amount">Update Prices</a>
+                 <li><a href="FeeDetails">Update Fee Details</a></li> 
+                  <li><a href="ProgramDetails">Update Program Details</a></li>
+                 <li><a href="/Deadline">Update Deadlines</a></li> 
+                  <li><a href="/conferencename">Conference Name</a></li>
+                  <li><a href="/amount">Update Prices</a></li>
                 </ul>
               </li>
               <li> <a class="navbar-brand active" style="color:red" href="deletedatabase">Delete Database</a> </li>
